--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,7 @@
 
 * {
     box-sizing: border-box;
+    font-family: fantasy;
 }
 
 html,
@@ -39,25 +40,54 @@ a {
     margin: 0 auto;
 }
 
+.input {
+    width: 500px;
+    opacity: 1;
+    border: 0.5px solid grey;
+}
+
+.top-wrapper .container {
+    display: flex;
+    align-items: center;
+    text-align: left;
+}
+
+.top-wrapper .container div {
+    padding: 10px;
+}
+
 .top-wrapper {
-    padding: 180px 0 100px 0;
-    background-image: url(https://prog-8.com/images/html/advanced/top_en.png);
+    padding: 225px 0 225px 0;
     background-size: cover;
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: center;
+    box-shadow: 0 1px 10px rgb(67, 67, 67);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.5)),
+        url(https://images.alphacoders.com/581/581184.jpg);
 }
 
 .top-wrapper h1 {
-    opacity: 0.7;
-    font-size: 45px;
+    opacity: 0.8;
+    font-size: 70px;
     letter-spacing: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    padding: 13px;
+    /* background-color: #191970b1; */
+    border-radius: 7px;
 }
 
 .top-wrapper p {
-    opacity: 0.7;
-    margin-bottom: 3px;
+    font-size: 30px;
+    font-family: sans-serif;
+    padding-left: 13px;
+
 }
+
+.header-left img {
+    max-width: 90px;
+    padding-top: 10px;
+}
+
 
 .btn-wrapper {
     text-align: center;
@@ -99,17 +129,18 @@ a {
 }
 
 header {
-    height: 65px;
+    height: 90px;
     width: 100%;
-    background-color: rgba(34, 49, 52, 0.9);
+    background-color: #191970dc;
     position: fixed;
     top: 0;
     z-index: 10;
+    box-shadow: 0 1px 10px rgb(67, 67, 67);
 }
 
 .logo {
     width: 124px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .header-left {
@@ -122,12 +153,13 @@ header {
 }
 
 .header-right a {
-    line-height: 65px;
+    line-height: 90px;
     padding: 0 25px;
     color: white;
     display: block;
     float: left;
     transition: all 0.5s;
+    font-family: sans-serif;
 }
 
 .header-right a:hover {
@@ -158,32 +190,39 @@ header {
     width: 25%;
 }
 
+.lesson img {
+    border-radius: 6px;
+    background-color: blue;
+}
+
 .lesson-icon {
     position: relative;
-    background-color: rgba(0, 174, 255, 0.179);
     margin: 6px;
-    border-radius: 6px;
+    border-radius: 10px;
     padding: 10px;
+    background-color: rgba(79, 79, 79, 0.042);
+    padding: 20px;
+}
+
+.lesson-icon img {
+    box-shadow: 1px 1px 8px rgb(106, 106, 106);
 }
 
 .lesson-icon p {
-    position: absolute;
-    top: 44%;
-    width: 100%;
-    color: white;
+
+    margin-top: 10px;
+    color: #969696;
 }
 
 .txt-contents {
     width: 80%;
     display: inline-block;
-    margin-top: 15px;
-    font-size: 15px;
+    margin-top: 10px;
+    font-size: 12px;
     color: #b3aeb5;
+    font-family: 'Courier New', Courier, monospace;
 }
 
-.heading h3 {
-    font-weight: normal;
-}
 
 .message-wrapper {
     border-bottom: 1px solid #eee;
@@ -193,9 +232,10 @@ header {
 
 .message {
     padding: 15px 40px;
-    background-color: #5dca88;
+    background-color: #f5a742;
     cursor: pointer;
-    box-shadow: 0 7px #1a7940;
+    box-shadow: 0 7px #a37941;
+    font-style: bold;
 }
 
 .message:active {
@@ -204,18 +244,18 @@ header {
     box-shadow: none;
 }
 
-footer img {
-    width: 125px;
-}
 
 footer p {
     color: #b3aeb5;
     font-size: 12px;
+    /* padding-left: 15px; */
 }
 
 footer {
     padding-top: 30px;
     padding-bottom: 20px;
+    padding-left: 10px;
+    background-color: #191970;
 }
 
 /* Ketik code Anda dibawah */
