--- a/stylesheet.css
+++ b/stylesheet.css
@@ -193,8 +193,12 @@ header {
         color: grey;
     }
 
-    50% {
+    33% {
         color: #191970;
+    }
+
+    66% {
+        color: rgb(255, 225, 0);
     }
 
     100% {
